--- a/gulimall-coupon/src/main/resources/application.yml
+++ b/gulimall-coupon/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 10000
+  port: 10001
 
 spring:
   datasource:
@@ -7,6 +7,12 @@ spring:
     username: root
     password: kw181619
     driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: gulimall-coupon
 
 mybatis-plus:
     mapper-locations: classpath:/mapper/**/*.xml
