--- a/gulimall-porder/src/main/resources/application.yml
+++ b/gulimall-porder/src/main/resources/application.yml
@@ -7,7 +7,12 @@ spring:
     username: root
     password: kw181619
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: gulimall-order
 mybatis-plus:
     mapper-locations: classpath:/mapper/**/*.xml
     global-config:
