--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -7,6 +7,13 @@ spring:
     username: root
     password: kw181619
     driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+        namespace: b6abf775-567d-4ab5-899d-0a52760c24ac
+  application:
+    name: gulimall-product
 
 mybatis-plus:
     mapper-locations: classpath:/mapper/**/*.xml
