--- a/gulimall-product/src/main/resources/bootstrap.properties
+++ b/gulimall-product/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 spring.application.name=gulimall-product
-spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+spring.cloud.nacos.config.server-addr=192.168.43.163:8848
 #命名空间
-spring.cloud.nacos.config.namespace=b6abf775-567d-4ab5-899d-0a52760c24ac
+##spring.cloud.nacos.config.namespace=b6abf775-567d-4ab5-899d-0a52760c24ac
 #分组
 spring.cloud.nacos.config.group=DEFAULT_GROUP
 #加载命名空间下多个配置：data-id、group、动态刷新
