--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -10,10 +10,20 @@ spring:
           uri: https://www.qq.com/
           predicates:
             - Query=url,qq
+
+        - id: gulimall-product
+          uri: lb://gulimall-product
+          predicates:
+            - Path=/api/product/**
+          filters:
+            - RewritePath=/api(?<segment>/?.*),/$\{segment}
+
         - id: renren-fast
           uri: lb://renren-fast
           predicates:
             - Path=/api/**
           filters:
             - RewritePath=/api(?<segment>/?.*), /renren-fast/$\{segment}
+
+
 ## 前端 + api
